<resources>
    <string name="app_name">XSound</string>

    <string name="nav_library">Songs</string>
    <string name="nav_playlist">Playlists</string>
    <string name="nav_queue">Playing Queue</string>
    <string name="nav_now_playing">Now Playing</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string name="menu_search">Search</string>

    <string name="menu_playlist_new">New playlist</string>
    <string name="menu_playlist_new_smart">New smart playlist</string>
    <string name="menu_playlist_shuffle">Shuffle all</string>

    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
</resources>
