<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library_music_white"
            android:title="@string/nav_library" />
        <item
            android:id="@+id/nav_playlist"
            android:icon="@drawable/ic_playlist_play_black"
            android:title="@string/nav_playlist" />
        <item
            android:id="@+id/nav_queue"
            android:icon="@drawable/ic_queue_music_black"
            android:title="@string/nav_queue" />

        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/ic_play_circle_filled_black"
            android:title="@string/nav_now_playing" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black"
                android:title="@string/nav_settings" />
            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_outline_black"
                android:title="@string/nav_about_us" />
        </menu>
    </item>

</menu>